ChainCommand-master/k8s/canary/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: chaincommand
  namespace: chaincommand
spec:
  host: chaincommand
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        h2UpgradePolicy: DEFAULT
        http1MaxPendingRequests: 100
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutiveErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
    - name: stable
      labels:
        app.kubernetes.io/name: chaincommand
        version: stable
    - name: canary
      labels:
        app.kubernetes.io/name: chaincommand
        version: canary
