ChainCommand-master/k8s/canary/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: chaincommand
  namespace: chaincommand
spec:
  hosts:
    - chaincommand
  http:
    - route:
        - destination:
            host: chaincommand
            subset: stable
          weight: 90
        - destination:
            host: chaincommand
            subset: canary
          weight: 10
      retries:
        attempts: 3
        perTryTimeout: 5s
        retryOn: gateway-error,connect-failure,refused-stream
      timeout: 30s
